# boundary

./: .gitignore  CHANGELOG.md  GUIDE.md  README.md  pyproject.toml
.github/workflows/: selftest.yml
agent_kit/: __init__.py  agent.py  cli.py  envelope.py  fury.py  headless.py  history.py  launchd.py  loop.py  schedule.py  stark.py  transcript.py
agent_kit/adapters/: __init__.py  clawpilot.py
agent_kit/clients/: __init__.py  anthropic.py  copilot.py  together.py
agent_kit/tools/: __init__.py  clawpilot.py  fs.py  registry.py  shell.py  web.py
benchmarks/: README.md  __init__.py  harness.py  results.md  run.py  suite.py
boundary/: __init__.py  agent.py  cli.py  discover.py  envelope.py  fielding_coach.py  fury.py  headless.py  history.py  launchd.py  loop.py  multirun.py  overlay.py  pipeline.py  retry.py  schedule.py  scheduler.py  selftest.py  sources_fabricspecs.py  stark.py  state.py  taint.py  third_umpire.py  transcript.py  triggers.py  win_scheduler.py
boundary/adapters/: __init__.py  clawpilot.py
boundary/clients/: __init__.py  _http.py  anthropic.py  base.py  copilot.py  openrouter.py  together.py
boundary/tools/: __init__.py  clawpilot.py  fs.py  registry.py  sandbox.py  shell.py  web.py  workspace.py
docs/superpowers/plans/: 2026-06-20-taint-ifc.md
docs/superpowers/specs/: 2026-06-20-boundary-taint-ifc-design.md
examples/: README.md  hello_world.py
examples/overlays/sample/: README.md  overlay.yaml
examples/pipelines/: squad-docs-health.yaml
examples/schedules/: daily-docs-check.yaml  fabricspecs-open-questions-weekly.yaml  release-notes-draft.yaml  weekly-coverage.yaml  weekly-risk-review.yaml
examples/workspaces/sample-repo/: README.md
examples/workspaces/sample-repo/.squad/agents/docs-maintainer/: charter.md
examples/workspaces/sample-repo/.squad/agents/release-note-writer/: charter.md
examples/workspaces/sample-repo/.squad/agents/repo-reviewer/: charter.md
examples/workspaces/sample-repo/.squad/agents/researcher/: charter.md
examples/workspaces/sample-repo/docs/: product-notes.md
examples/workspaces/sample-repo/src/: access.py
examples/workspaces/sample-repo/tests/: access_checks.py
tests/: test_auto_driver.py  test_benchmark_harness.py  test_bestofk_surface.py  test_cli_bestofk.py  test_client_retry.py  test_commit_killlist.py  test_config_driver.py  test_copilot_token_permissions.py  test_discover.py  test_envelope_noprogress.py  test_envelope_writes.py  test_multirun.py  test_multirun_judge.py  test_overlay.py  test_path_isolation.py  test_pipeline.py  test_prevalidate.py  test_retry.py  test_sandbox_driver.py  test_schedule_discover.py  test_scheduler_dispatch.py  test_scout_hook.py  test_sources_fabricspecs.py  test_state.py  test_taint_cli.py  test_taint_flow.py  test_taint_provenance.py  test_taint_store.py  test_third_umpire_downgrade.py  test_third_umpire_egress.py  test_third_umpire_staging.py  test_third_umpire_write_profile.py  test_triggers.py  test_typed_feedback.py  test_win_scheduler.py
tests/redteam/: test_commit_policy.py  test_downgrade_surfaced.py  test_egress.py  test_gated_guarantees.py  test_selftest_runner.py  test_staging_gate.py  test_symlink_escape.py  test_taint.py  test_taint_cross_stage.py  test_write_boundary.py
