[project]
name = "agent-kit"
version = "0.1.0"
description = "Minimal tool-calling agent harness with pluggable model backends"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.scripts]
agent-kit = "agent_kit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_kit*"]
