[project]
name = "boundary"
version = "0.10.0"
description = "Tool-calling agent harness with envelopes, staging gates, schedules, and post-run evaluation"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mihir Wagle"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.scripts]
boundary = "boundary.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["boundary*"]

[tool.setuptools.data-files]
"share/boundary/examples" = [
    "examples/README.md",
    "examples/hello_world.py",
]
"share/boundary/examples/prompts" = [
    "examples/prompts/docs-maintainer.md",
    "examples/prompts/release-note-writer.md",
    "examples/prompts/repo-reviewer.md",
    "examples/prompts/researcher.md",
]
"share/boundary/examples/overlays/sample" = [
    "examples/overlays/sample/README.md",
    "examples/overlays/sample/overlay.yaml",
]
"share/boundary/examples/schedules" = [
    "examples/schedules/daily-docs-check.yaml",
    "examples/schedules/release-notes-draft.yaml",
    "examples/schedules/weekly-coverage.yaml",
    "examples/schedules/weekly-risk-review.yaml",
]
"share/boundary/examples/pipelines" = [
    "examples/pipelines/squad-docs-health.yaml",
]
"share/boundary/examples/workspaces/sample-repo" = [
    "examples/workspaces/sample-repo/README.md",
]
"share/boundary/examples/workspaces/sample-repo/.squad/agents/docs-maintainer" = [
    "examples/workspaces/sample-repo/.squad/agents/docs-maintainer/charter.md",
]
"share/boundary/examples/workspaces/sample-repo/.squad/agents/release-note-writer" = [
    "examples/workspaces/sample-repo/.squad/agents/release-note-writer/charter.md",
]
"share/boundary/examples/workspaces/sample-repo/.squad/agents/repo-reviewer" = [
    "examples/workspaces/sample-repo/.squad/agents/repo-reviewer/charter.md",
]
"share/boundary/examples/workspaces/sample-repo/.squad/agents/researcher" = [
    "examples/workspaces/sample-repo/.squad/agents/researcher/charter.md",
]
"share/boundary/examples/workspaces/sample-repo/docs" = [
    "examples/workspaces/sample-repo/docs/product-notes.md",
]
"share/boundary/examples/workspaces/sample-repo/src" = [
    "examples/workspaces/sample-repo/src/access.py",
]
"share/boundary/examples/workspaces/sample-repo/tests" = [
    "examples/workspaces/sample-repo/tests/access_checks.py",
]
"share/boundary/examples/workspaces/sample-repo/scratch" = [
    "examples/workspaces/sample-repo/scratch/.gitkeep",
]

[tool.ruff]
# Security tooling: a standing lint gate guards against the subtle slips that
# matter most here. Target the minimum supported runtime.
target-version = "py310"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = import order, B = bugbear (catches e.g. bare
# except, mutable defaults), UP = pyupgrade. Pragmatic, not maximal.
select = ["E", "F", "I", "B", "UP"]
# E501 (line length) is advisory here — many docstrings/denylist comments are
# intentionally long. The formatter, not the linter, owns wrapping.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests use compact conventions the package code shouldn't: semicolon imports
# (E702), `assert False` fixtures (B011), throwaway locals (F841), and the odd
# short name (E741). The package itself is held to the full rule set.
"tests/**" = ["E402", "E702", "B011", "F841", "E741"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests can import the top-level `benchmarks`
# package (not shipped in the wheel, so strict PEP 660 editable installs don't
# expose it).
pythonpath = ["."]
